## Process this file with automake to produce Makefile.in

libhttp_a_SOURCES = \
	HttpStatusLine.c \
	HttpHeaderType.c \
	HttpHeaderEntry.c \
	HttpHeader.c \
	HttpHeaderTools.c \
	HttpHeaderFieldInfo.c \
	HttpHeaderFieldStat.c \
	HttpHeaderStats.c \
	HttpHeaderVars.c \
	HttpHeaderMask.c \
	HttpHeaderParse.c \
	HttpVersion.c \
	HttpHeaderList.c \
	HttpHeaderPut.c \
	HttpHeaderGet.c \
	HttpHdrCc.c \
	HttpMsg.c \
	HttpHdrRange.c \
	HttpHdrContRange.c \
	HttpBody.c \
	HttpMethod.c

noinst_LIBRARIES = \
	libhttp.a
